# chess-project

./: .gitignore  CMakeLists.txt  README.md  compile.bat
replay/include/replay/: replay.cpp  replay.h
replay/src/: main.cpp
scacchiera/include/chessboard/: chessboard.cpp  chessboard.h  movement.cpp
scacchiera/include/menu/: menu.cpp  menu.h
scacchiera/include/pair/: pair.cpp  pair.h
scacchiera/include/piece/: piece.cpp  piece.h
scacchiera/include/player/: player.cpp  player.h
scacchiera/src/: main.cpp
